fix: status e taxa de conclusao corrigidos na montagem do DTO dos desafios com progresso do usuario